fix width on mobile for image-icons in walkthrough example section

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ p {
   align-items: center;
 }
 
+.image-icon {
+  width: 100%;
+}
+
 /*******************
     2.Helper
 *******************/
